corrected method sorroundingEnemies